# lexer_tests

Sublime_syntax_tests/: syntax_test_clojure_2.clj
Sublime_syntax_tests/Rust/: syntax_test_attributes.rs  syntax_test_closures.rs  syntax_test_comments.rs  syntax_test_control_flow.rs  syntax_test_dyn.rs  syntax_test_enum.rs  syntax_test_expr.rs  syntax_test_functions.rs  syntax_test_generics.rs  syntax_test_literals.rs  syntax_test_macros.rs  syntax_test_match.rs  syntax_test_misc.rs  syntax_test_modules.rs  syntax_test_punct.rs  syntax_test_raw.rs  syntax_test_struct.rs  syntax_test_traits.rs  syntax_test_types.rs  syntax_test_union.rs  syntax_test_visibility.rs
_not_done/Texinfo/: Texinfo.lcf  lexer Texinfo.txt  texinfo.cson
big_files/: 100K lines.txt.xz  1M pascal.pas.xz  2M data.json.xz  30M.log.xz  3M data.xml.xz  3M single line.xml.xz  3M.xml  40M single line.xml.xz  5M pascal.pas.xz  8M lines.txt.xz
common/: auto_fold_comments.c  git_conflict.txt
from_Sublime_Text/: syntax_test_python_strings.py
html_includes/: my.css  my.html
lexers/4GL/: assoc2.4gl  file.4gl  hello.4gl  hello2.4gl  hello_db.4gl  (+5 more)
lexers/Meson/: meson_options.txt
ligatures/: ligatures_javascript.js
markdown_includes/: test.md
test_CudaText_color_themes/: test.diff  test.htm  test.ini  test.md  test.php  test.py  test.rst
test_linters/: New.cpp  New.css  New.htm  PyLint_false_error.py  Tst.js  Tst.json  Tst.mo  Tst.py  Tst.xml  class-abstract.php  class.php  mod.txt
test_text_issues/: tabs.txt  tabstop-with-unicodes.txt  unicode-with-surrogates-pairs.txt  wide_chars.txt
(+2144 files in other folders)
