option('example',
  type : 'boolean',
  value : false,
  description : 'Here is a sample option'
)

option('enable-tests',
  type : 'boolean',
  value : true,
  description : 'Enables tests.'
)

option('enable-benchmarks',
  type : 'boolean',
  value : true,
  description : 'Enables benchmarks.'
)
12  0
12.34 #ddd
0xffaa

